--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["Emiliy Feldman <feldlime@yandex.ru>"]
 maintainers = ["Emiliy Feldman <feldlime@yandex.ru>"]
 readme = "README.md"
-packages = [
+packages = [˝
     { include = "service" }
 ]
 
@@ -15,11 +15,12 @@ fastapi = "^0.104.0"
 pydantic = "^2.4.2"
 gunicorn = "^21.2.0"
 uvloop = "^0.19.0"
-uvicorn = "^0.23.0"
+uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
 orjson = "^3.9.10"
 starlette = "^0.27.0"
 httpx = "^0.22.0"  # for starlette.testclient
 pydantic-settings = "^2.0.3"
+cloudflared = "^1.0.0.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "7.4.3"
